unescape() needs to convert from UTF-16 to page encoding properly, instead of just using ToNewCString().  Bug 200984, r=smontagu, waldemar, sr=jst